# Errands

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  DONATIONS.md  Errands.doap  LICENSE  Makefile  PLUGINS.md  README.md  TRANSLATIONS.md  com.github.mrvladus.List.yaml  draft  draft.c  io.github.mrvladus.List.Devel.json  io.github.mrvladus.List.json  io.github.mrvladus.List.yaml  list.doap  meson.build  meson_options.txt  pug.c  pug.h  pyproject.toml
data/: com.github.mrvladus.List.desktop  com.github.mrvladus.List.gschema.xml  com.github.mrvladus.List.metainfo.xml  errands.desktop.in  errands.gresource.xml  errands.gschema.xml  gschemas.compiled  io.github.mrvladus.Errands.desktop  io.github.mrvladus.Errands.desktop.in  io.github.mrvladus.Errands.service.in  io.github.mrvladus.List.desktop  io.github.mrvladus.List.desktop.in.in  io.github.mrvladus.List.gschema.xml  io.github.mrvladus.List.gschema.xml.in  io.github.mrvladus.List.metainfo.xml  io.github.mrvladus.List.metainfo.xml.in  io.github.mrvladus.List.metainfo.xml.in.in  io.github.mrvladus.List.service.in  meson.build
data/icons/: meson.build
data/resources/: errands.gresource.xml  meson.build  style-dark.css  style.css
data/resources/gtk/: help-overlay.ui
data/styles/: style-dark.css  style.css
errands/: __builtins__.pyi  application.py  errands.py  meson.build  state.py
errands/lib/: animation.py  data.py  encryption.py  functions.py  goa.py  gsettings.py  logging.py  notifications.py  plugins.py  recurrence.py  reminder.py  utils.py
errands/lib/sync/: sync.py
errands/res/ui/: trash_item.ui
errands/resources/: errands.gresource.xml  style-dark.css  style.css
errands/resources/gtk/: help-overlay.ui
errands/resources/ui/: details_panel.ui  lists_panel.ui  preferences.ui  shortcuts_window.ui  sidebar.ui  task.ui  task_details.ui  tasks_list.ui  trash_item.ui  trash_panel.ui  window.ui
errands/tests/: tests.py
errands/tests/widgets/: test_details.py  test_sidebar.py  test_task.py  test_task_list.py  test_window.py
errands/utils/: animation.py  data.py  functions.py  goa.py  gsettings.py  gtk.py  logging.py  markup.py  sync.py  tasks.py
errands/widgets/: __init__.py  component.py  components.py  details.py  details_panel.py  lists.py  lists_item.py  lists_panel.py  loading_page.py  preferences.py  secret_notes.py  shortcuts_window.py  sidebar.py  task.py  task_details.py  task_list.py  task_list_details.py  tasks_list.py  tasks_list_sidebar.py  trash.py  trash_item.py  trash_panel.py  window.py  window.ui
errands/widgets/components/: box.py  button.py  datetime.py  datetime_picker.py  datetime_picker.ui  datetime_window.py  datetime_window.ui  notes_window.py  notes_window.ui  titled_separator.py  titled_separator.ui
errands/widgets/shared/: attachments_window.py  color_selector.py  datetime_picker.py  datetime_window.py  notes_window.py  sidebar_item.py  titled_separator.py
errands/widgets/sidebar/: sidebar.py  sidebar.ui  tags_row.py  tags_row.ui  task_list_item.py  task_list_item.ui  task_list_row.py  task_list_row.ui  task_lists.py  task_lists_item.py  today_item.py  today_item.ui  today_row.py  today_row.ui  trash_item.py  trash_item.ui  trash_row.py  trash_row.ui
errands/widgets/tags/: tags.py  tags.ui  tags_sidebar_row.py  tags_sidebar_row.ui
errands/widgets/task/: __init__.py  datetime_window.py  datetime_window.ui  notes.py  notes_window.py  tag.py  tags_list_item.py  task.py  task.ui  task_progress_bar.py  task_sub_tasks.py  task_tags_bar.py  task_title.py  task_toolbar.py
errands/widgets/task_list/: __init__.py  task_list.py  task_list.ui  task_list_content.py  task_list_details.py  task_list_entry.py  task_list_header_bar.py  task_list_sidebar_row.py  task_list_sidebar_row.ui
errands/widgets/task_lists/: task_lists.py  task_lists_item.py
errands/widgets/task_py/: task.py  task_progress_bar.py  task_sub_tasks.py  task_tags_bar.py  task_title.py  task_toolbar.py  task_top_drop_area.py
errands/widgets/tasks/: task_data_list_view.py  tasks_page.py  (+3 more)
src/: about-dialog.c  about-dialog.h  application.py  attachments-window.c  attachments-window.h  caldav.c  caldav.h  color-window.c  components.h  config.h  config.h.in  data-io.c  data-sort.c  data.c  data.h  data.py  date-chooser.blp  date-chooser.c  date-chooser.h  date-window.c  date-window.h  delete-list-dialog.blp  delete-list-dialog.c  delete-list-dialog.h  dialogs.h  errands.py  global.c  global.h  globals.py  list  list.py  main.c  main.py  meson.build  month-chooser.c  month-chooser.h  new-list-dialog.blp  new-list-dialog.c  new-list-dialog.h  no-lists-page.c  (+127 more)
src/components/: date-chooser.c  date-chooser.h  month-chooser.c  time-chooser.c  time-chooser.h  week-chooser.c  week-chooser.h
src/data/: data-io.c  data-props.c  data.c  data.h
src/dialogs/: delete-list-dialog.c  delete-list-dialog.h  dialogs.h  new-list-dialog.c  rename-list-dialog.c  rename-list-dialog.h
src/lib/: cJSON.c  cJSON.h  caldav.c  caldav.h  xml.h
src/libcaldav/: caldav-calendar.c  caldav-client.c  caldav-event.c  caldav-list.c
src/res/: errands.gresource.xml  io.github.mrvladus.List.gresource.xml  list.gresource.xml  meson.build  preferences_window.ui  style-dark.css  style.css  todo.ui  window.ui
src/resources/: list.gresource.xml  styles.css
src/sidebar/: delete-list-dialog.c  new-list-dialog.c  rename-list-dialog.c  sidebar-all-row.c  sidebar-task-list-row.c  sidebar-task-list-row.h  sidebar.c  sidebar.h
src/sync/: sync.c  sync.h
src/task/: attachments-window.c  color-window.c  color-window.h  date-chooser.c  date-window.c  date-window.h  month-chooser.c  notes-window.c  notes-window.h  priority-window.c  tags-window.c  task-toolbar.c  task-toolbar.h  task.c  task.h  time-chooser.c  week-chooser.c
src/task-list/: sort-dialog.c  sort-dialog.h  task-list.c  task-list.h
src/utils/: array.h  datetime.h  files.h  ical.h  macros.h  str.h
src/widgets/: about_window.py  entry.c  entry.h  entry.py  headerbar.c  headerbar.h  headerbar.py  main_window.py  subtodo.c  todo.c  todo.h  todo.py  todolist.c  todolist.h  todolist.py
(+139 files in other folders)
